# nagging

./: .gitignore  README.md  nx.json  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions-copy.md  directory_structure.md  meeting_notes.md  project_overview.md  task_list.md
.github/workflows/: ci.yml
apps/backend/: .env.example  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/ai/: service.py
apps/backend/src/api/: __init__.py  models.py  routes.py
apps/backend/src/cache/: service.py
apps/backend/src/static/: index.html
apps/backend/tests/: test_ai.py
apps/extension/: package.json  tsconfig.json  webpack.config.js
apps/extension/src/: manifest.json
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts  styles.css
apps/extension/src/popup/: index.html  index.ts
apps/extension/src/types/: index.ts
apps/web/: package.json  tsconfig.json
